Mon May 18 13:34:27 1998  Keith Seitz  <keiths@cygnus.com>

        * dbxread.c (process_one_symbol): If block addresses are relative to
        function start addresses, reset function_start_address whenever a new
        source file is seen.

start-sanitize-d30v
Sat May 16 22:21:48 1998  Frank Ch. Eigler  <fche@cygnus.com>

	* config/d30v/tm-d30v.h (INIT_FRAME_PC_FIRST): Fill in PC into
 	frame struct before extracting saved register offsets.

end-sanitize-d30v
Thu May 14 5:51:00 1998  Ron Unrau  <runrau@cygnus.com>

	* symtab.c (decode_line_1): set section for "break *<addr>"

Wed May 13 20:58:02 1998  Mark Alexander  <marka@cygnus.com>

	* corefile.c (reopen_exec_file): Reopen the exec file if
	it has changed.

Wed May 13 15:22:02 1998  Mark Alexander  <marka@cygnus.com>

	* sparc-tdep.c (fetch_instruction): New function.
	(single_step, sparc_init_extra_frame_info, examine_prologue):
	Use fetch_instruction instead of read_memory_integer
	to ensure that instructions are always read as big-endian.

Wed May 13 14:42:21 1998  Ian Lance Taylor  <ian@cygnus.com>

	* configure.in: Add AC_FUNC_ALLOCA.
	* defs.h: Check HAVE_ALLOCA_H rather than sparc.  Add _AIX pragma
	alloca.
	* configure: Rebuild.
start-sanitize-java
	* Makefile.in (jv-lang.o, jv-typeprint.o, jv-valprint.o): New
	targets.
end-sanitize-java

Tue May 12 13:17:35 1998  Frank Ch. Eigler  <fche@cygnus.com>

	* stabsread.c (read_one_struct_field): Check for typedef in type
 	tree before clearing bitfield information.

Thu May  7 14:49:38 1998  Bob Manson  <manson@charmed.cygnus.com>

	* config/sparc/tm-sp64.h (CALL_DUMMY): Store and retrieve
	%o0-%o5 as 64-bit values; compensate for stack bias.
	(USE_STRUCT_CONVENTION): We only pass pointers to structs
	if they're larger than 32 bytes.
	(REG_STRUCT_HAS_ADDR): Ditto.

	* sparc-tdep.c (sparc_init_extra_frame_info): Use read_sp()
 	instead of read_register. If the target is a sparc64 and the frame
 	pointer is odd, compensate for the stack bias.